# dirclone

./: .gitignore  Cargo.toml  README.md  dev-sync.sh  install.sh  probe10mb.sh
src/: cli.rs  crawler.rs  downloader.rs  errors.rs  fetcher.rs  lib.rs  main.rs  manifest.rs  models.rs  parser.rs  progress.rs  store.rs
tests/: integration_clone.rs
