[package]
name = "dirclone"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
futures = "0.3"
globset = "0.4.15"
indicatif = "0.17"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "gzip", "deflate", "brotli", "stream"] }
scraper = "0.19.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "fs", "io-util", "time"] }
url = "2.5.2"

[dev-dependencies]
mockito = "1.6.1"
tempfile = "3.12.0"
